fixed iss38: log out only appearing when logged in, adjusted letter spacing in hmenus,enlarged logo

--- a/css/layout_inner.css
+++ b/css/layout_inner.css
@@ -30,6 +30,9 @@
 .content {
 	text-align: left;
 }
+.content p {
+	text-align: justify;
+}
 .content ul {
     padding-left: 40px;
     margin: 10px;
@@ -115,7 +118,7 @@
 /* end of vmenu settings */
 
 #bottom_of_page {
-	height: 450px;
+	height: 500px;
 }
 
 #page_form input[type=text], textarea {
@@ -147,9 +150,9 @@
     margin-bottom: 10px;
 }
 #logo {
-	width: 180px;
-	height: 180px;
-	margin: 0 10px 10px 10px;
+	width: 190px;
+	height: 190px;
+	margin: 0 10px 10px 0;
 }
 #rightbar div {
 	margin-bottom: 20px;
