--- a/css/layout_outer.css
+++ b/css/layout_outer.css
@@ -145,12 +145,14 @@ ul.hmenu li a
 	padding: 15px 12px 15px 12px;
 	float: left;
 	width: auto;
-	letter-spacing: 1px;
 }
 /* end of horizontal menu formatting */
 
 #user_menu {
 	float: right;
+}
+#main_menu li a {
+	letter-spacing: 1px;
 }
 #main_menu {
     float: left;
